# Prakriti-Determine

./: .gitignore  README.md  package-lock.json  package.json
Dataset/: sentences_intent.csv
PrakritiGPT/: PRAKRITI-GPT.pptx  README.md  app.py  get_intent.py  intents.json  model.py  run_app.py
PrakritiGPT/ML/: prakriti_pred.py
PrakritiGPT/datasets/: Data1.ipynb  sentences_intent.csv  trained_model
PrakritiGPT/datasets/.ipynb_checkpoints/: Data1-checkpoint.ipynb
PrakritiGPT/discord/: bot.py  discord questionnaire.txt  main.py  responses.py
PrakritiGPT/miscellaneous/: Questionnaire
PrakritiGPT/static/: style.css  style_new.css
PrakritiGPT/templates/: base.html  main.js  random.html  styles.css
bot/: .gitignore  app.py  call.bat  chatModule.py  database.py  datasetCreator.py  diet.py  doc.html  intents.json  intentsLoader.py  logger.py  models.py  pyproject.toml  question.py  requirements.txt  utils.py
bot/ML/: BotQueries.ipynb  Data_Analysis.ipynb  DietRecommender.ipynb  NLPChatbot.ipynb  Prakrit_NaiveBayes.ipynb  Prakriti.ipynb  PrakritiDeep.ipynb  Prakriti_Dataset.ipynb  Prakriti_DecisionTree.ipynb  Prakriti_Logistic.ipynb  Prakriti_SVC.ipynb  SaveDBData.ipynb  Video.ipynb  classes.pkl  words.pkl
bot/Testing/: model1.py  model2.py
bot/Training/: botmodel.py  prakritimodel.py
bot/dataset/: Prakriti.csv  data.csv  diet.csv  sentences.csv  sentences_intent.csv  videos.csv
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/API/: api.js
frontend/src/Components/: About.jsx  ChatMessage.jsx  Chatbot.jsx  ChatbotButton.jsx  ChatbotOpen.jsx  DownloadButton.jsx  Error.jsx  Footer.jsx  Front.jsx  Info.jsx  InformationCard.jsx  Messages.jsx  Modal.jsx  Navbar.jsx  QuestionMessage.jsx  ShareButton.jsx  SimpleMessage.jsx  SolutionStep.jsx  UserMessage.jsx
frontend/src/Config/: index.js
frontend/src/Styles/: About.css  Chatbot.css  Footer.css  Front.css  Info.css  Navbar.css
